[profile.release]
panic = 'unwind'

[workspace]
default-members = [
    "node",
    "support",
    "primitives",
    "pallets/*",
    "runtime",
]

members = [
    "node",
    "support",
    "primitives",
    "pallets/assets",
    "pallets/bridge",
    "pallets/common",
    "pallets/forum",
    "pallets/names",
    "pallets/nfr",
    "pallets/nfr-auction",
    "pallets/nfr-blindbox",
    "pallets/nfr-multi",
    "pallets/nfr-trade",
    "pallets/price",
    "pallets/rewards",
    "pallets/stake",
    "pallets/staking",
    "pallets/staking/rpc",
    "pallets/staking/rpc/runtime-api",
    "pallets/template",
    "pallets/validator-set",
    "runtime",
]